# EndstonePluginTemplate

./: CMakeLists.txt  README.md
.github/workflows/: cmake-compile.yml
src/: example_plugin.cpp  example_plugin.h
